[gd_scene load_steps=17 format=3 uid="uid://c1x2se33xxc3e"]

[ext_resource type="Script" uid="uid://bqs80gt38m7o7" path="res://mainManager.gd" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://ck8huegqea3x1" path="res://specialContainer.gd" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://cj54wwnhta225" path="res://circle.svg" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://cjd5ru6itt8i5" path="res://languageChange.tscn" id="5_7mycd"]
[ext_resource type="Texture2D" uid="uid://b4qorwjucrdj6" path="res://point.svg" id="5_lquwl"]
[ext_resource type="Texture2D" uid="uid://clhlw2bac3lna" path="res://shape.svg" id="7_4c57u"]
[ext_resource type="Texture2D" uid="uid://dl5wx64cxcb6x" path="res://kaplin.png" id="8_efxa6"]
[ext_resource type="Texture2D" uid="uid://620s5b6ac6vj" path="res://cradleLogo.png" id="9_dg77c"]
[ext_resource type="Texture2D" uid="uid://ch7wd1fmhtmeu" path="res://PLACEHOLDERQuestionBar.png" id="10_ycdy4"]

[sub_resource type="Gradient" id="Gradient_1bvp3"]
offsets = PackedFloat32Array(0, 0.337662, 0.681818, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0.681818, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lquwl"]
gradient = SubResource("Gradient_1bvp3")
fill_to = Vector2(0.733945, 0.733945)

[sub_resource type="Animation" id="Animation_7mycd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_lquwl"]
resource_name = "move"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.49, 1),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -110.3), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_272bh"]
_data = {
&"RESET": SubResource("Animation_7mycd"),
&"move": SubResource("Animation_lquwl")
}

[sub_resource type="Theme" id="Theme_w48qg"]
default_font_size = 30
RichTextLabel/constants/outline_size = 8

[sub_resource type="Theme" id="Theme_vivmo"]
default_font_size = 21

[node name="Node2D" type="Node2D" node_paths=PackedStringArray("ContainerNode")]
script = ExtResource("1_0xm2m")
ContainerNode = NodePath("DisplayContainer/Container")

[node name="DisplayContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 651.0

[node name="BGColor" type="ColorRect" parent="DisplayContainer"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.995392
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Parallax2D" type="Parallax2D" parent="DisplayContainer/BGColor"]
repeat_size = Vector2(1125, 630)
autoscroll = Vector2(6, 20)
repeat_times = 2

[node name="TextureRect" type="TextureRect" parent="DisplayContainer/BGColor/Parallax2D"]
modulate = Color(0.133333, 0.133333, 0.133333, 0.0392157)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1125.0
offset_bottom = 630.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1bvp3")
stretch_mode = 1

[node name="TextureRect" type="TextureRect" parent="DisplayContainer/BGColor"]
modulate = Color(1, 1, 1, 0.470588)
self_modulate = Color(0.4928, 0.4928, 0.77, 1)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = SubResource("GradientTexture2D_lquwl")

[node name="Container" type="Container" parent="DisplayContainer" node_paths=PackedStringArray("FocusedNode")]
layout_mode = 0
offset_left = -39.0
offset_top = 2.0
offset_right = 1116.0
offset_bottom = 648.0
script = ExtResource("1_ig7tw")
FocusedNode = NodePath("")
YSpacing = 116.23
Wrap = true
SelectedXOffset = 141.95
Exponent = 1.75

[node name="Control11" parent="DisplayContainer/Container" instance=ExtResource("5_7mycd")]
layout_mode = 2

[node name="Label" type="Label" parent="."]
offset_left = 1.0
offset_top = -2.0
offset_right = 116.0
offset_bottom = 21.0
scale = Vector2(9.89673, 3.22652)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "choose a game"

[node name="Point" type="Sprite2D" parent="."]
position = Vector2(527, 330)
rotation = 1.57079
scale = Vector2(0.259332, 0.259332)
texture = ExtResource("5_lquwl")
flip_v = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Point"]
libraries = {
&"": SubResource("AnimationLibrary_272bh")
}

[node name="GameShowcase" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 560.0
offset_top = 133.0
offset_right = 1113.0
offset_bottom = 555.0

[node name="NinePatchRect" type="NinePatchRect" parent="GameShowcase"]
self_modulate = Color(0, 0, 0, 0.258824)
layout_mode = 0
offset_left = 4.0
offset_top = -7.0
offset_right = 567.0
offset_bottom = 134.0
texture = ExtResource("7_4c57u")
patch_margin_left = 27
patch_margin_right = 27

[node name="Creator" type="TextureRect" parent="GameShowcase/NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.834697
anchor_top = 0.464052
anchor_right = 0.944354
anchor_bottom = 0.901961
offset_left = -3.05176e-05
texture = ExtResource("8_efxa6")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="CreatorName" type="RichTextLabel" parent="GameShowcase/NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.531083
anchor_top = 0.517731
anchor_right = 0.830592
anchor_bottom = 0.779168
theme_override_constants/outline_size = 6
text = "By Kaplin"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Time" type="RichTextLabel" parent="GameShowcase/NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.529307
anchor_top = 0.702128
anchor_right = 0.828816
anchor_bottom = 0.963566
theme_override_constants/outline_size = 6
text = "Over 90 Hours"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="GameLogo" type="TextureRect" parent="GameShowcase/NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0490998
anchor_top = 0.0457517
anchor_right = 0.486433
anchor_bottom = 0.911047
offset_right = 204.789
offset_bottom = 82.6098
scale = Vector2(0.566124, 0.615768)
texture = ExtResource("9_dg77c")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="GameName" type="RichTextLabel" parent="GameShowcase/NinePatchRect"]
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.479542
anchor_top = 0.0849673
anchor_right = 0.932897
anchor_bottom = 0.51634
theme = SubResource("Theme_w48qg")
text = "Engrams of Chaos"
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ImageSkewer" type="Node2D" parent="GameShowcase"]
position = Vector2(10, 1)
skew = 0.207694

[node name="ColorRect" type="ColorRect" parent="GameShowcase/ImageSkewer"]
offset_left = 21.0
offset_top = 138.0
offset_right = 560.0
offset_bottom = 410.0
color = Color(0, 0, 0, 0.160784)
metadata/_edit_use_anchors_ = true

[node name="Promo" type="TextureRect" parent="GameShowcase/ImageSkewer/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00742115
anchor_top = 0.0257352
anchor_right = 0.489796
anchor_bottom = 0.981618
texture = ExtResource("9_dg77c")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Desc" type="RichTextLabel" parent="GameShowcase/ImageSkewer/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.504638
anchor_right = 0.983302
anchor_bottom = 1.0
text = "Engrams of chaos is a arcade-take on a autochess game. 
In this game, you obtain engrams to craft various units in order to beat your previous higshscores.
The game features various gamemodes, allowing for
uh
fun ig
yeah"
metadata/_edit_use_anchors_ = true

[node name="ComplexityScoreHolder" type="ColorRect" parent="GameShowcase"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0976492
anchor_top = 0.959716
anchor_right = 0.341772
anchor_bottom = 1.14218
color = Color(0.152941, 0.152941, 0.152941, 0.556863)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="GameShowcase/ComplexityScoreHolder"]
layout_mode = 0
anchor_left = -0.00411523
anchor_top = 0.025974
anchor_right = 1.0
anchor_bottom = 0.415584
theme = SubResource("Theme_vivmo")
theme_override_constants/outline_size = 4
text = "COMPLEXITY RATING:"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="GameShowcase/ComplexityScoreHolder"]
layout_mode = 0
anchor_left = 0.0411523
anchor_top = 0.402597
anchor_right = 0.958848
anchor_bottom = 0.922078
max_value = 5.0
step = 0.05
value = 4.45
nine_patch_stretch = true
texture_under = ExtResource("10_ycdy4")
texture_progress = ExtResource("10_ycdy4")
tint_under = Color(0.233925, 0.233925, 0.233925, 1)
metadata/_edit_use_anchors_ = true

[connection signal="reShuffled" from="DisplayContainer/Container" to="." method="_on_container_re_shuffled"]
